Fix navbar spacing

--- a/recipes/src/components/Navbar/styles.scss
+++ b/recipes/src/components/Navbar/styles.scss
@@ -14,5 +14,9 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+
+    & > *:not(:last-child) {
+      margin-right: $spacing-regular;
+    }
   }
 }
